modules/network/network-vpc.tf
resource "aws_vpc" "default_vpc" {
  cidr_block           = var.vpc_cidr_block
  instance_tenancy     = "default"
  enable_dns_hostnames = "true"
  enable_dns_support   = "true"

  tags = {
    Name = "vpc.${terraform.workspace}"
  }
}
